<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		      android:orientation="vertical" android:gravity="left" android:layout_width="fill_parent"
		      android:layout_height="match_parent" android:background="#000000"
		      android:paddingTop="5dp"
		      android:paddingLeft="3dp"
		      android:paddingRight="3dp">
  	        
   	    <TextView
   	        style="@style/label"
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:text="@string/str_documento_de_cobranca"
   	        android:textSize="16sp"
   	        android:textStyle="bold" />
   	    
   	    <TextView
   	        style="@style/label"
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:paddingTop="5dp"
   	        android:paddingLeft="6dp"
   	        android:text="@string/str_contas"
   	        android:textSize="15sp"/>
	
   	    <TableLayout android:id="@+id/tabelaDebitos" 
   	        android:layout_width="fill_parent" 
   	        android:layout_height="wrap_content" 
   	        android:paddingTop="5dp"
   	        android:stretchColumns="*">
		
			<TableRow android:background="#808080" >
				<TextView style="@style/row" 
					android:text="@string/str_mes_ano" 
				    android:layout_marginRight="1dip"
					android:paddingLeft="4dip"
    		    	android:textSize="15sp" />
				
				<TextView style="@style/row" 
					android:text="@string/str_vencimento"
    		    	android:textSize="15sp" />
				
				<TextView style="@style/row" 
					android:text="@string/str_situacao"
    		    	android:textSize="15sp" />
				
				<TextView style="@style/row"  
					android:text="@string/str_valor_conta"
				    android:paddingRight="4dip"
    		    	android:textSize="15sp" />
			</TableRow>
		
		</TableLayout>
		
		<TextView
		    android:id="@+id/valorTotalContas" 
   	        style="@style/label"
   	        android:layout_width="fill_parent"
   	        android:layout_height="fill_parent"
   	        android:textSize="16sp"
   	        android:textStyle="bold"
   	        android:gravity="right" 
   	        android:paddingRight="4dip"
   	        android:paddingTop="5dip"/>
     	
</LinearLayout>
