<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 android:layout_width="fill_parent" android:layout_height="wrap_content"
			 android:stretchColumns="2">

	<TableRow android:background="#353535" android:paddingTop="9px">
		<!-- Tipo de Serviço -->
		<TextView android:text="@string/str_tipo_servico"
				  android:layout_marginRight="1px" android:textStyle="bold" 
				  android:layout_span="2"/>
		<TextView android:id="@+id/tipoServicoRoteiroApresentacao" android:layout_span="3" android:layout_gravity="left"/>
		
	</TableRow>
	<TableRow android:background="#353535">
		<!-- OS -->
		<TextView android:text="@string/label_OS" android:layout_margin="0px"
				  android:textStyle="bold" android:layout_width="0px"/>
		<TextView android:id="@+id/osServicoRoteiroApresentacao" android:layout_gravity="left"
		    android:layout_margin="0px"/> 
		

		
		<!-- Qtd -->
		<TextView android:text="@string/label_qtd" 
				  android:layout_marginRight="1px" android:textStyle="bold" android:layout_gravity="right"/>
		<TextView android:layout_gravity="right" android:id="@+id/qtdServicoRoteiroApresentacao" />   
	    
	</TableRow>
	<TableRow android:background="#353535">
		<!-- Data -->
		<TextView android:text="@string/label_data" 
				  android:layout_marginRight="1px" android:textStyle="bold" />
		<TextView android:id="@+id/dataServicoRoteiroApresentacao" android:layout_gravity="left"/>
		
		
		<!-- Ordem -->
		<TextView android:text="@string/label_ordem" android:layout_gravity="right"
				  android:layout_marginRight="1px" android:textStyle="bold" />
		<TextView android:layout_gravity="right" android:id="@+id/ordemServicoRoteiroApresentacao" />
	</TableRow>

	<TabHost android:layout_width="fill_parent"
	    	 android:layout_marginTop="5px" 
	    	 android:layout_height="fill_parent" 
	    	 android:id="@android:id/tabhost">
		
		<LinearLayout android:id="@+id/LinearLayout01" android:orientation="vertical" 
					  android:layout_height="fill_parent" android:layout_width="fill_parent">
			
			<TabWidget android:id="@android:id/tabs" android:layout_height="wrap_content" android:layout_width="fill_parent" />
		
			<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
				<FrameLayout android:id="@android:id/tabcontent" android:layout_height="fill_parent" android:layout_width="fill_parent" />
			</ScrollView>
		</LinearLayout>
	</TabHost>
</TableLayout>

